Fix Group overflow.

--- a/packages/block-editor/src/components/inserter/style.scss
+++ b/packages/block-editor/src/components/inserter/style.scss
@@ -187,7 +187,10 @@
 	@include break-medium () {
 		display: block;
 		position: relative;
-		height: 480px;
+		min-height: 480px;
+		height: 50%;
+		max-height: 640px;
+		overflow: hidden;
 		padding: $grid-size-large;
 		@include edit-post__fade-in-animation();
 
